@@ -1,5 +1,13 @@
 Revision history for DBD::Oracle
 
+NEXT_VERSION
+
+  [BUG FIXES]
+
+  - Fix RT80349 - The error message in execute_for_fetch when a row fails
+    can contain the wrong error count. Thanks to Steffen Goeldner for
+    RT and patch.
+
 1.52      2012-10-19
 
  - promote 1.51_00 to official release
